--- a/public/modules/global/css/global.css
+++ b/public/modules/global/css/global.css
@@ -153,10 +153,6 @@ body {
         margin: 0px 1.5em;
     }
 
-    .table td {
-        padding: .3em !important;
-    }
-
     table.unify {
         border: 1px solid #CCCCCC;
         border-collapse: collapse;
@@ -824,7 +820,7 @@ img.border-icon{
 }
 
 .new-layout .table-striped tbody tr:nth-of-type(2n+1) {
-    background-color: transparent !important;
+    background-color: transparent;
 }
 
 .new-layout .table td {
@@ -1074,7 +1070,7 @@ img.border-icon{
     border: 1px solid #2E85EC;
 }
 .table td {
-    padding: 18px !important;
+    padding: 18px;
 }
 tbody td{
     font-size:14px;
