--- a/public/modules/reports/css/reports.css
+++ b/public/modules/reports/css/reports.css
@@ -78,9 +78,9 @@ h4.number{
 
 
 /* new reports */
-.grey {
-    color: #636363;
-}
+.grey { color: #636363; }
+.gray-1 { color: #9E9E9E; }
+
 .new-title {
     font-size: 30px;
     line-height: 44px;
@@ -112,7 +112,7 @@ h4.number{
     }
 }
 .lk-export {
-    font-size: .9rem;
+    font-size: 15px;
     line-height: 39px;
     font-weight: bold;
     text-align: left;
@@ -121,12 +121,15 @@ h4.number{
 .lk-export i {
     float: left; 
 }
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 1225px) {
     .box-export { 
         padding: 0;
         display: flex;
     }
-    .lk-export { margin-left: auto; }
+    .lk-export { margin-left: auto; font-size: 0.9rem; }
+}
+@media only screen and (min-width: 1600px) {
+    .lk-export { font-size: 15px; }
 }
 
 /* box reports */
@@ -147,10 +150,7 @@ h4.number{
 .header-reports {
     display: flex;
     width: 100%;
-    margin: 0 16px;
-}
-@media only screen and (min-width: 1223px) {
-    .header-reports { margin-right: 0; }
+    padding-right: 0;
 }
 
 .title-reports {
@@ -197,3 +197,30 @@ h4.number{
     text-indent: -9000em;
     overflow: hidden;
 }
+
+/* cards reports */
+.cards-reports { justify-content: space-between; }
+
+.cards-reports .card-body { padding-top: 5px; }
+
+.cards-reports .card { 
+    width: 100%; 
+    border-radius: 8px; 
+}
+
+.cards-reports h6 {font-weight: 700;}
+
+@media only screen and (min-width: 768px) {
+    .cards-reports .card { width: calc(1/3*100% - (1 - 1/3)* 30px); }
+}
+
+/* graph */
+.new-graph .ct-labels, 
+.new-graph .ct-grids {
+    display: none;
+}
+.ct-series-a .ct-line {
+    /* Set the colour of this series line */
+    stroke: #2e85ec;
+    
+  }
