--- a/public/modules/global/css/global.css
+++ b/public/modules/global/css/global.css
@@ -1432,6 +1432,7 @@ img.border-icon{
     border: 1px solid #2E85EC;
     box-sizing: border-box;
     border-radius: 8px;
+    line-height: 1;
 }
 .modal-plans .btn.btn-edit:not(:disabled):not(.disabled):active:focus {
     box-shadow: none;
@@ -1443,7 +1444,7 @@ img.border-icon{
 }
 .modal-plans .informations-data,
 .modal-plans .products-data {
-    margin-top: 20px;
+    margin-top: 22px;
 }
 .modal-plans .informations-data label {
     margin: 0;
@@ -1968,4 +1969,13 @@ tbody td{
 }
 .input-number:focus-within .btn-add {
     border-left: 0px solid #FFF !important;
+}
+
+#btn-edit-informations-plan:hover,
+#btn-edit-products-plan:hover {
+    background: #2E85EC;
+}
+#btn-edit-informations-plan:not(:disabled):hover svg path,
+#btn-edit-products-plan:not(:disabled):hover svg path {
+    fill:#ffffff;
 }
