build: new modal in ASAAS and CIELO

--- a/resources/assets/modules/global/assets/css/loading.css
+++ b/resources/assets/modules/global/assets/css/loading.css
@@ -67,6 +67,9 @@
     z-index: 1;
 }
 
+.loadinModal {
+    height: 100px;
+}
 .loaderModal {
     border: 16px solid #F3F3F3;
     border-radius: 50%;
