--- a/public/modules/finances/css/new-finances.css
+++ b/public/modules/finances/css/new-finances.css
@@ -272,6 +272,10 @@
     padding-bottom: 20px;
     margin-bottom: 20px;
 }
+#text-description-withdrawal-custom small {
+    display: block;
+    margin-top: 10px
+}
 
 #debit-items p{
     font-size: 14px;
