--- a/public/modules/reports/css/reports.css
+++ b/public/modules/reports/css/reports.css
@@ -80,6 +80,7 @@ h4.number{
 /* new reports */
 .grey { color: #636363; }
 .gray-1 { color: #9E9E9E; }
+.pad-0 { padding: 0; }
 
 .new-title {
     font-size: 30px;
@@ -141,16 +142,18 @@ h4.number{
     .box-reports { padding: 0 30px; }
 }
 
-.pad-right-0 { padding-right: 1.0715rem; }
+.container-reports { padding-right: 1.0715rem; }
 
 @media only screen and (min-width: 1223px) {
-    .pad-right-0 { padding-right: 0; }
+    .container-reports { padding-right: 0; }
 }
 
 .header-reports {
     display: flex;
     width: 100%;
-    padding-right: 0;
+}
+@media only screen and (min-width: 1223px) {
+    .header-reports { padding-right: 0; }
 }
 
 .title-reports {
@@ -214,6 +217,60 @@ h4.number{
     .cards-reports .card { width: calc(1/3*100% - (1 - 1/3)* 30px); }
 }
 
+@media only screen and (min-width: 1220px) {
+    .box-payment-option {
+        display: flex;
+        flex: 2;
+    }
+}
+
+.container-payment {
+    height: 100%;
+    align-items: center;
+}
+
+.box-ico {
+    width: 36px;
+    height: 37px;
+    background: #F5F5FA;
+    border-radius: 8px;
+    text-align: center;
+    margin-right: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box-ico i { font-size: 20px; }
+
+.sel-origin {margin-top: 5px;}
+
+/* payment options */
+.col-payment {
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    flex: 1;
+}
+
+@media only screen and (min-width: 1220px) {
+    .col-graph { flex: 2; }
+    .box-image-payment {
+        flex: 0;
+        padding-right: 10px;
+    }    
+}
+
+
+
+.bar {
+    background: #2E85EC;
+    text-indent: -9000em;
+    overflow: hidden;
+    border-radius: 4px;
+}
+
+
 /* graph */
 .new-graph .ct-labels, 
 .new-graph .ct-grids {
@@ -223,4 +280,4 @@ h4.number{
     /* Set the colour of this series line */
     stroke: #2e85ec;
     
-  }
+}
