--- a/public/modules/global/css/new-site.css
+++ b/public/modules/global/css/new-site.css
@@ -745,7 +745,7 @@ input[type=radio] {
 }
 
 .table-striped > tbody > tr:nth-child(2n+2) > td, .table-striped > tbody > tr:nth-child(2n+2) > th {
-    background-color: #F8FBFF !important;
+    background-color: #FBFBFB !important;
 }
 
 .table-striped tbody tr:nth-of-type(2n+1) {
