--- a/public/modules/global/css/global.css
+++ b/public/modules/global/css/global.css
@@ -1983,3 +1983,10 @@ tbody td{
 #table-plans .options-column-width {
     width: 120px !important;
 }
+
+.modal-plans .btn-plus:not(:disabled):hover {
+    background: #41DC8F;
+}
+.modal-plans .btn-plus:not(:disabled):hover svg path {
+    stroke:#ffffff;
+}
