fix: font color

--- a/public/modules/finances/css/new-finances.css
+++ b/public/modules/finances/css/new-finances.css
@@ -572,7 +572,7 @@ select, .select-pad {
     .s-table.table-finance-schedule {
         grid-template-columns: 1fr 1fr;
         grid-template-areas: "sale status"
-                             "date value";
+                             "date value"
                              "date-start date-end";
     }
 
