--- a/public/modules/reports/css/reports.css
+++ b/public/modules/reports/css/reports.css
@@ -82,12 +82,113 @@ h4.number{
 .gray-1 { color: #9E9E9E; }
 .pad-0 { padding: 0; }
 
+/* modal relatorios */
+.line-reports {
+    display: flex;
+    justify-content: start;
+    margin-top: 10px;
+    margin-left: 3px;
+    display: none;
+}
+@media only screen and (min-width: 1227px){
+    .line-reports {
+        justify-content: end;
+        margin-left: 0;
+    }
+}
+.modal-reports {
+    background: #FCFCFD;
+    padding: 24px 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 4px 20px rgba(46, 133, 236, .17);
+    border-radius: 15px;
+    position: absolute;
+    z-index: 1;
+}
+@media only screen and (min-width: 768px){
+    .modal-reports { width: 544px; }
+} 
+.head-modal {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding-bottom: 15px;
+}
+.head-modal h3 {
+    color: #23262F;
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 32px;
+}
+.head-modal a { color:#87898E; }
+.modal-report-content { width: 100%; }
+
+.modal-report-content h6 {
+    color: #23262F;
+    font-weight: 700;
+    font-size: 16px;
+}
+.modal-report-content .form-icons {position: relative;}
+.modal-report-content .form-icons i {
+    left: 10px;
+    top: 17px;
+    width: 20px;
+}
+
+.modal-report-content input[type='checkbox'],
+.modal-report-content input[type='radio'] {
+    width: 20px;
+}
+
+.modal-email {
+    padding: 8px 35px;
+}
+
+.modal-report-content label {
+    color: #23262F;
+    font-weight: 400;
+    font-size: 16px;
+    padding: 0 15px 0 5px;
+}
+
+.modal-buttons {
+    padding: 20px 0 0;
+    justify-content: space-between;
+    flex-direction: column;
+}
+@media only screen and (min-width: 768px){
+    .modal-buttons { flex-direction: row; }
+}
+
+.modal-buttons input {
+    padding: 14px 0;
+    flex: 0.48;
+    font-size: 16px;
+    font-weight: 700;
+    border: 0;
+    margin-bottom: 15px;
+    cursor: pointer;
+}
+@media only screen and (min-width: 768px){
+    .modal-buttons input { margin-bottom: 0; }
+}
+
+.modal-buttons .reset {
+    color: #636363;
+    background: #F1F1F1;
+}
+.modal-buttons .send {
+    background: #3772FF;
+    color: #fff;
+}
+
 .new-title {
     font-size: 30px;
     line-height: 44px;
     padding-bottom: 30px;
 }
-
 .box-select {
     margin: 10px 0;
 }
@@ -105,6 +206,7 @@ h4.number{
     .box-select input {
         margin-left: 5px! important;
         width: 92% !important;
+        padding: 9px 8px;
     } 
 }
 @media only screen and (min-width: 1024px) {
@@ -112,13 +214,31 @@ h4.number{
         padding-bottom: 0;
     }
 }
+
+.inner-reports {
+    background: #fff;
+    width: 208px;
+    height: 43px;
+    border-radius: 8px;
+    border: 1px solid #E0E7EE;
+    display: flex;
+    margin: 10px 0;
+}
+@media only screen and (min-width: 992px) {
+    .inner-reports { margin: 0; }
+}
+
 .lk-export {
     font-size: 15px;
     line-height: 39px;
     font-weight: bold;
-    text-align: left;
     display: block;
+    margin: 0 auto;
 }
+.inner-reports.focus {
+    border: 1px solid #88BFFF;
+}
+
 .lk-export i {
     float: left; 
 }
@@ -126,12 +246,11 @@ h4.number{
     .box-export { 
         padding: 0;
         display: flex;
+        justify-content: end;
     }
-    .lk-export { margin-left: auto; font-size: 0.9rem; }
+    .lk-export { margin: 0 auto; }
 }
-@media only screen and (min-width: 1600px) {
-    .lk-export { font-size: 15px; }
-}
+
 
 /* box reports */
 .box-reports {
