--- a/public/modules/checkouteditor/css/custom-inputs.css
+++ b/public/modules/checkouteditor/css/custom-inputs.css
@@ -1,6 +1,7 @@
 /* ------------ Banner Custom Radio -------------- */
 
-.custom-icon-radio[type="radio"] {
+.custom-icon-radio[type="radio"],
+.custom-radio[type="radio"] {
   position: absolute;
   left: -9999px;
 }
@@ -36,13 +37,6 @@
   width: 20px;
 }
 
-/* ------------ Blue Button Radio -------------- */
-
-.custom-radio[type="radio"] {
-  position: absolute;
-  left: -9999px;
-}
-
 .custom-radio[type="radio"] + label {
   display: flex;
   justify-content: center;
@@ -62,6 +56,7 @@
 .custom-radio[type="radio"]:checked + label {
   background-color:#2E85EC;
   color: #FFF;
+  font-weight: bold;
 }
 
 .custom-radio[type="radio"] + label:hover {
@@ -99,6 +94,7 @@
 .custom-bubble-check[type="checkbox"]:checked + label {
   background-color:#2E85EC;
   color: #FFF;
+  font-weight: bold;
 }
 
 .custom-bubble-check[type="checkbox"] + label:hover {
@@ -107,4 +103,15 @@
 
 .check-group {
   display: flex;
+}
+
+
+.triple-check[type=checkbox]:checked+label::after {
+  font-weight: bold;
+  content: "\f199" !important;
+}
+
+
+.custom-bubble-check[type="checkbox"] + label:hover {
+  opacity: 0.8;
 }
